--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "author": "acproject@qq.com",
   "type": "commonjs",
-  "main": "js/server.js",
+  "main": "js/index.js",
   "scripts": {
     "install": "node-gyp rebuild",
     "prebuild": "npm run build:cpp",
@@ -47,14 +47,19 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
     "@babel/preset-env": "7.28.5",
     "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@babel/register": "^7.28.3",
     "benchmark": "^2.1.4",
     "chai": "^6.2.2",
     "mocha": "^11.7.5",
     "node-gyp": "12.1.0",
     "nodemon": "^3.1.11"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.4"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -63,6 +68,7 @@
     "src/cpp",
     "src/node",
     "binding.gyp",
-    "dist/"
+    "js/",
+    "test/"
   ]
 }
