feat: 添加CLI工具和插件系统支持
- 新增create-mini-next-app CLI工具用于创建项目
- 实现插件系统支持生命周期钩子和API扩展
- 改进ISR缓存管理，添加模块路径索引
- 增强图片处理功能，支持高度参数和格式转换
- 添加测试用例验证新功能

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "acproject@qq.com",
   "type": "commonjs",
   "main": "js/index.js",
+  "bin": {
+    "create-mini-next-app": "js/create-mini-next-app.js"
+  },
   "scripts": {
     "install": "node-gyp rebuild",
     "prebuild": "npm run build:cpp",
