feat: 添加C++ CLI工具和增强模板选项
新增mn和mini-next-serve两个C++可执行文件，用于创建项目和启动生产服务器
扩展create-mini-next-app支持更多模板选项，包括CSS框架、UI组件和数据库选择
添加自动安装依赖和构建CSS的功能
移除旧的页面缓存文件

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "commonjs",
   "main": "js/index.js",
   "bin": {
-    "create-mini-next-app": "js/create-mini-next-app.js"
+    "create-mini-next-app": "js/create-mini-next-app.js",
+    "mn": "build/Release/mn",
+    "mini-next-serve": "build/Release/mini_next_serve"
   },
   "scripts": {
     "install": "node-gyp rebuild",
