feat: 添加Tailwind CSS支持并优化音乐站点功能
- 新增Tailwind CSS配置文件及样式文件
- 添加app插件用于注入Tailwind样式和启用认证
- 更新package.json添加Tailwind相关依赖和构建脚本
- 优化首页认证按钮显示逻辑
- 删除旧的数据库缓存文件
- 更新README文档内容

--- a/examples/music-site/package.json
+++ b/examples/music-site/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build:css": "tailwindcss -c ./tailwind.config.cjs -i ./styles/tailwind.css -o ./public/tailwind.css --minify",
+    "dev:css": "tailwindcss -c ./tailwind.config.cjs -i ./styles/tailwind.css -o ./public/tailwind.css --watch"
   },
   "dependencies": {
     "mini-next-cpp": "file:../..",
     "better-sqlite3": "^11.10.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17",
+    "daisyui": "^4.12.14"
   }
 }
