feat: 更新音乐网站示例，添加数据库和样式文件
refactor: 重构package.json中的bin路径配置
style: 更新tailwind.css导入方式
chore: 删除旧版本release文件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-next-cpp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "基于C++的小型NextJs的框架",
   "keywords": [
     "C++",
@@ -13,8 +13,8 @@
   "main": "js/index.js",
   "bin": {
     "create-mini-next-app": "js/create-mini-next-app.js",
-    "mn": "build/Release/mn",
-    "mini-next-serve": "build/Release/mini_next_serve"
+    "mn": "js/bin/mn.js",
+    "mini-next-serve": "js/bin/mini-next-serve.js"
   },
   "scripts": {
     "install": "node-gyp rebuild",
