--- a/examples/my-app/package.json
+++ b/examples/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music-site",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "mini-next-cpp": "file:../..",
-    "better-sqlite3": "^11.10.0"
+    "mini-next-cpp": "file:../.."
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17",
