--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-next-cpp",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "基于C++的小型NextJs的框架",
   "keywords": [
     "C++",
@@ -74,6 +74,9 @@
     "src/node",
     "binding.gyp",
     "js/",
-    "test/"
+    "test/",
+    "third_party/ftxui/include",
+    "third_party/ftxui/src",
+    "third_party/ftxui/LICENSE"
   ]
 }
